fix(ui): bruteforce margin-top for main-content to prevent overlapping navbar

--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,7 @@ body::before {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-top: 160px !important;
 }
 
 /* Header */
